Moved Leaflet images and css out of node_modules folder.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <title>leaflet example</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="node_modules/leaflet/dist/leaflet.css">
+  <link rel="stylesheet" href="vendor/leaflet/leaflet.css">
   <!--[if lte IE 8]>
-    <link rel="stylesheet" href="node_modules/leaflet/dist/leaflet.ie.css" />
+    <link rel="stylesheet" href="vendor/leaflet/leaflet.ie.css" /> TODO: Find and add missing leaflet.ie.css file..
   <![endif]-->
   <link rel="stylesheet" href="style.css">
 </head>
